--- a/css/styles.css
+++ b/css/styles.css
@@ -15,11 +15,48 @@ reset-to-default-settings
  ul,
  ol {
      list-style-type: none;
+     margin: 0;
+     padding: 0;
+ }
+
+ h1,
+ h2,
+ h3,
+ h4,
+ h5,
+ h6,
+ p {
+     margin: 0;
  }
 
  a {
      text-decoration: none;
+
  }
+
+ .container {
+     max-width: 1158px;
+     padding: 0 15px;
+     margin: 0 auto;
+ }
+
+ .page-header {
+     border-bottom: border-bottom 1px solid #e7e9fc;
+ }
+
+ .header-container {
+     display: flex;
+     align-items: center;
+ }
+
+ .header-nav {
+     display: flex;
+     align-items: center;
+ }
+
+
+
+
 
  .logo {
      font-family: "Raleway", sans-serif;
@@ -31,16 +68,37 @@ reset-to-default-settings
      color: #4d5ae5;
  }
 
+ .header-logo {
+     padding: 24px 0;
+     margin-right: 76px;
+ }
+
  .header-logo .logo-part {
      color: #2e2f42;
  }
 
+ .nav-list {
+     display: flex;
+     align-items: center;
+     gap: 40px;
+ }
+
+ .contacts-list {
+     display: flex;
+     align-items: center;
+     gap: 40px;
+
+
+ }
+
  .nav-link {
+     display: block;
      font-weight: 500;
      font-size: 16px;
      line-height: 1.5;
      letter-spacing: 0.02em;
      color: #2e2f42;
+     padding: 24px 0;
  }
 
  .nav-link:hover,
@@ -57,6 +115,7 @@ reset-to-default-settings
 
  .contacts {
      font-style: normal;
+     margin-left: auto;
  }
 
  .contacts-link {
@@ -64,6 +123,8 @@ reset-to-default-settings
      line-height: 1.5;
      letter-spacing: 0.02em;
      color: #434455;
+     display: block;
+     padding: 24px 0;
  }
 
  .page-footer {
