--- a/css/styles.css
+++ b/css/styles.css
@@ -41,7 +41,7 @@ reset-to-default-settings
  }
 
  .page-header {
-     border-bottom: border-bottom 1px solid #e7e9fc;
+     border-bottom: 1px solid #e7e9fc;
  }
 
  .header-container {
@@ -111,6 +111,7 @@ reset-to-default-settings
  .page-main-section-button:hover,
  .page-main-section-button:focus {
      background-color: #404bbf;
+
  }
 
  .contacts {
@@ -137,6 +138,7 @@ reset-to-default-settings
 
  .page-main-section {
      background-color: #2e2f42;
+     padding: 188px 0;
  }
 
  .page-main-section-title {
@@ -146,6 +148,11 @@ reset-to-default-settings
      letter-spacing: 0.02em;
      text-align: center;
      color: #fff;
+     max-width: 496px;
+     text-align: center;
+     margin-left: auto;
+     margin-right: auto;
+     margin-bottom: 48px;
  }
 
  .page-main-section-button {
@@ -156,6 +163,15 @@ reset-to-default-settings
      color: #fff;
      background-color: #4d5ae5;
      cursor: pointer;
+     display: block;
+     max-width: 169px;
+     height: 56px;
+     border: none;
+     border-radius: 4px;
+     cursor: pointer;
+     margin-left: auto;
+     margin-right: auto;
+
  }
 
  .page-main-first-section-item-title {
