--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,3 @@
-/* ============ COMMON STYLES ============ */
 body {
     font-family: "Roboto", sans-serif;
     color: #434455;
@@ -14,7 +13,6 @@ ol {
 }
 
 h1,
-h2,
 h2,
 h3,
 h4,
@@ -44,16 +42,19 @@ a {
     line-height: 1.17;
     letter-spacing: 0.03em;
     text-transform: uppercase;
-    color: #4d5ae5;
+    color: #4D5AE5;
+
+}
+
+
+.footer-logo {
+    margin-bottom: 16px;
+
 }
 
 .header-logo {
-    padding: 24px 0;
-    margin-right: 76px;
-}
+    margin-right: 0;
 
-.header-logo .logo-part {
-    color: #2e2f42;
 }
 
 .nav-link {
@@ -87,8 +88,6 @@ a {
     gap: 40px;
 }
 
-/*------------- common ------------*/
-
 /*------------- header ------------*/
 .page-header {
     border-bottom: 1px solid #e7e9fc;
@@ -117,10 +116,6 @@ a {
     color: #404bbf;
 }
 
-/*------------- header ------------*/
-
-/* ============ COMMON STYLES ============ */
-
 /* ============ MAIN-HERO-STYLES ============ */
 .hero-section {
     padding: 188px 0;
@@ -141,7 +136,6 @@ a {
 }
 
 /*------------ BUTTON ------------*/
-
 .hero-btn {
     border-radius: 4px;
     min-width: 169px;
@@ -162,24 +156,11 @@ a {
 .hero-btn:hover,
 .hero-btn:focus {
     background-color: #404bbf;
-    cursor: pointer;
 }
-
-/* ============ MAIN-HERO-STYLES ============ */
 
 /* ============ BENEFITS-STYLES ============ */
-
 .benefits-section {
     padding: 120px 0;
-}
-
-.benefits-list {
-    display: flex;
-    gap: 24px;
-}
-
-.benefits-item {
-    width: 264px;
 }
 
 .visually-hidden {
@@ -197,6 +178,17 @@ a {
     overflow: hidden;
 }
 
+
+.benefits-list {
+    display: flex;
+    gap: 24px;
+}
+
+.benefits-item {
+    width: 264px;
+}
+
+
 .benefits-list-title,
 .team-title,
 .portfolio-title {
@@ -206,17 +198,17 @@ a {
     line-height: 1.2;
     letter-spacing: 0.02em;
     color: #2e2f42;
-    text-align: center;
+    text-align: left;
+
 }
 
 .benefits-list-text,
 .team-text {
     line-height: 1.5;
     letter-spacing: 0.02em;
-    text-align: center;
-}
+    text-align: left;
 
-/* ============ BENEFITS-STYLES ============ */
+}
 
 /*============ Our Team Styles ============ */
 .team-list {
@@ -234,7 +226,6 @@ a {
     padding: 32px 0;
 }
 
-/* ============ Our Team Styles ============ */
 .team-list-img,
 .portfolio-list-img {
     display: block;
@@ -247,7 +238,6 @@ a {
 }
 
 /* ============ Our Portfolio ============ */
-
 .portfolio-section {
     padding-top: 120px;
     padding-bottom: 120px;
@@ -257,11 +247,16 @@ a {
     font-size: 36px;
     line-height: 1.11;
     letter-spacing: 0.02em;
-    text-align: center;
+    text-align: left;
     text-transform: capitalize;
     color: #2e2f42;
     margin-bottom: 72px;
-    padding-top: 120px;
+}
+
+
+.portfolio-title {
+    padding: 0;
+
 }
 
 .portfolio-list {
@@ -277,18 +272,10 @@ a {
     border-top: none;
 }
 
-/* ============ Our Portfolio ============ */
-
 /* ============ Page Footer ============ */
-
 .page-footer {
     background-color: #2e2f42;
     padding: 100px 0;
-}
-
-.logo {
-    display: inline-block;
-    margin-bottom: 16px;
 }
 
 .text-footer {
@@ -297,5 +284,3 @@ a {
     color: #f4f4fd;
     max-width: 264px;
 }
-
-/* ============ Page Footer ============ */
